--- a/facerecognition api/package.json
+++ b/facerecognition api/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "type": "commonjs",
   "main": "index.js",
+  "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
